@@ -2500,3 +2500,4 @@ seen. gmtime warning still there
   from 'aClient *sptr' to 'aClient *sptr, int what'.
   'what' will be MODE_ADD if trying to add and MODE_DEL if trying to remove.
 - Added HOOKTYPE_REMOTE_NICKCHANGE (called like: cptr, sptr, newnick).
+- Fixed a bug regarding +f and bounce modes, would cause a crash, reported by Rocko.
